--- a/index.html
+++ b/index.html
@@ -2,12 +2,48 @@
 <html>
     <head>
         <title>Voice Recognition App</title>
-      
+        <style>
+        .talk{
+            width: 200px;
+            height: 25px;
+            border-radius: 10px;
+            border-width: 2px;
+            margin-top: 50px;
+
+
+        }
+        body{
+             
+            margin-top: 10px;
+            width: 400px;
+            height: 400px;
+
+        }
+        .title{
+            font-size: 30px;
+            font-weight: bold;
+            text-align: center;
+            padding: 30px;
+        }
+        .one{
+            background-color: #913347;
+            width: 300px;
+            height: 600px;
+            margin-left: 500px;
+
+
+        }
+
+        .talk:hover {background-color: gray;}
+        </style>
     </head>
     <body>
-         <button class="talk">Talk</button>
+       <div class="one">
+        <p class="title">Voice Recognition App</p>
+        <center> <button class="talk">Talk</button></center>
          <h3 class="content"></h3>
 
          <script src="./script.js"></script>
+     </div> 
     </body>
 </html>
